ecomm_ing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
       labels:
         app: user-service
    spec:
       containers:
        - name: user-service-img
          image: nikithaboopathy/ecommerce-user-service:v2
          ports:
           - containerPort: 8081   
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
       labels:
         app: product-service
    spec:
       containers:
        - name: product-service-img
          image: nikithaboopathy/ecommerce-product-service:v2
          ports:
           - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
       labels:
         app: order-service
    spec:
       containers:
        - name: order-service-img
          image: nikithaboopathy/ecommerce-order-service:v2
          ports:
           - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
       labels:
         app: payment-service
    spec:
       containers:
        - name: payment-service-img
          image: nikithaboopathy/ecommerce-payment-service:v2
          ports:
           - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
