ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8081

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8082

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8083

      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8084
